# financenews

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Dockerfile  FIXES_SUMMARY.md  LICENSE  Makefile  PROJECT_RESTRUCTURE_PLAN.md  README.md  REORGANIZATION_SUMMARY.md  TASK.md  alembic.ini  config.yaml  dashboard.py  demo_preview.py  docker-compose.yml  enhanced_news_summarizer.py  eslint.config.mjs  news_summarizer.py  next.config.js  package-lock.json  package.json  phase1_requirements.txt  preview.html  pyproject.toml  realtime_websocket_manager.py  requirements.txt  requirements_full.txt  run_server.py  setup.py  setup_clean_project.py  start-nextjs.bat  start.bat  start_services.bat  tailwind.config.js  tsconfig.json  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_connector.yml
.github/workflows/: ci.yml  frontend-reliability.yml  staging-gate.yml
.jules/: bolt.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_source_metadata.py
briefings/: 2025-05-21.md
components/: Layout.tsx  Navigation.tsx  NotificationCenter.tsx
components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  select.tsx  separator.tsx  table.tsx
config/: env_template  quality-baseline.json  quality_ratchet.json
context/: NotificationContext.tsx  ThemeContext.tsx
docs/: PROJECT_REVIEW_CHECKLIST.md  QUICK_START_PHASE1.md  README.md  architecture-current.md  index.md  product-north-star.md  realtime_integration_plan.md
docs/archive/: OPTIMIZATION_SUMMARY.md
docs/operations/: backup-restore-drill.md  staging-release-gate.md
docs/quality/: README.md
docs/runbooks/: frontend-reliability.md
frontend/: README.md  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/api/: news.js  newsApi.js
frontend/src/components/: Layout.js  MarketDataWidget.js  NotificationCenter.js  SearchBar.js  SentimentAnalyzer.js
frontend/src/context/: NotificationContext.js
frontend/src/pages/: Analytics.js  ArticleDetail.js  Home.js  SavedArticles.js  SentimentDashboard.js  Settings.js  Tools.js
lib/: crawler-init.ts  internalIdentity.ts  notification-context.ts  session.ts  useDebounce.ts
lib/crawlers/: CrawlerManager.ts  CrawlerScheduler.ts
lib/fallback/: defaultSources.ts
lib/models/: Article.ts  NewsSource.ts
lib/utils/: crawler-utils.ts
output/playwright/: live-interaction-demo.cjs  live-interaction-shots.txt
output/playwright/smoke/: screenshots.txt
pages/: _app.tsx  index.tsx  saved.tsx  settings.tsx
pages/admin/: crawler.tsx  ingest.tsx
pages/analytics/: index.tsx
pages/api/: analytics.ts  health.ts  sources.ts  topics.ts  ws.ts
pages/api/_utils/: fastapiProxy.ts  localDataFallback.ts
pages/api/articles/: [id].ts  index.ts
pages/api/crawler/: index.ts  sources.ts
pages/api/ingest/: status.ts  telemetry.ts
pages/api/user/: alerts.ts  settings.ts
pages/articles/: [id].tsx  index.tsx
requirements/: base.txt  dev.txt  ml.txt
scripts/: backfill_ingested_articles.py  optimize_performance.py  project_setup.py  quality_baseline.py  quality_checkpoint.py  quality_ratchet.py  ralph_codex.sh  run_demo_local.sh  screenshot_regression.sh  smoke_frontend.sh
scripts/ops/: postgres_ops.py  staging_release_gate.py
scripts/quality/: check_quality_ratchet.py  generate_baseline.py
scripts/smoke/: check-routes-and-api.ts
src/financial_news/: __init__.py  cli.py
src/financial_news/analytics/: advanced_analytics.py
src/financial_news/api/: __init__.py  api_management.py  app_factory.py  container.py  dependencies.py  errors.py  helpers.py  ingest_state.py  lifecycle.py  lifespan.py  main.py  middleware.py  saved_articles.py  schemas.py  websockets.py
src/financial_news/cli/: main.py
src/financial_news/collaboration/: collaboration_engine.py
src/financial_news/config/: __init__.py  logging.py  settings.py
src/financial_news/core/: __init__.py  enhanced_news_summarizer.py  realtime_websocket_manager.py  schemas.py  sentiment.py  sentiment_finbert.py  summarizer.py  summarizer_config.py
src/financial_news/dashboard/: __init__.py  app.py  visualization_engine.py
src/financial_news/economics/: macro_analysis_engine.py
src/financial_news/intelligence/: news_nlp_engine.py
src/financial_news/market_data/: realtime_market_engine.py
src/financial_news/models/: __init__.py  article.py  enhanced_graph_analyzer.py  multimodal_sentiment_analyzer.py
src/financial_news/portfolio/: portfolio_management.py  portfolio_management_engine.py
src/financial_news/security/: enterprise_security.py
src/financial_news/services/: __init__.py  automation_engine.py  content_extractor.py  continuous_runner.py  feed_ranking.py  ingest_types.py  news_ingest.py  stock_correlator.py  streaming.py  websocket.py
src/financial_news/storage/: __init__.py  db.py  models.py  repositories.py
src/financial_news/trading/: algorithmic_trading_engine.py
src/financial_news/utils/: __init__.py  normalization.py
src/services/crawler/: CrawlerManager.ts  index.ts  (+1 more)
src/types/: api.ts  index.ts  ui.ts
styles/: globals.css
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_continuous_runner_deterministic.py  test_streaming.py
tests/unit/: __init__.py  test_admin_security_hardening.py  test_api_admin_auth.py  test_api_admin_security.py  test_api_container_wiring.py  test_api_contract_lock.py  test_api_contracts.py  test_api_coverage.py  test_api_helpers.py  test_api_route_regression.py  test_app_factory.py  test_article.py  test_connectors.py  test_content_extractor.py  test_continuous_runner.py  test_db_bootstrap.py  test_feed_ranking.py  test_ingest_helpers.py  test_ingest_types.py  test_normalization_utils.py  test_quality_checkpoint.py  test_reddit_connector.py  test_repositories_db.py  test_repository_helpers.py  test_settings.py  test_stage1_ingestion.py
utils/: fetcher.ts
(+26 files in other folders)
