[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-news-ai"
version = "2.0.0"
description = "AI-powered Financial News Analysis with Real-time Streaming"
authors = [
    {name = "Financial News AI Team", email = "team@financialnews.ai"}
]
license = {text = "MIT"}
readme = "docs/README.md"
requires-python = ">=3.8"
keywords = ["finance", "news", "ai", "sentiment-analysis", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.3.0",
    "websocket-client>=1.7.0",
    "websockets>=12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "rich>=13.6.0",
    "aiohttp>=3.9.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "PyYAML>=6.0.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0"
]
ml = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "librosa>=0.10.1",
    "opencv-python>=4.8.0"
]
full = [
    "financial-news-ai[dev,ml]",
]

[project.scripts]
financial-news = "financial_news.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/financial-news-ai"
Documentation = "https://financial-news-ai.readthedocs.io"
Repository = "https://github.com/yourusername/financial-news-ai.git"
Issues = "https://github.com/yourusername/financial-news-ai/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "websocket.*",
    "redis.*",
    "transformers.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*"
] 